Updated styling and fixed background color gap bug in smaller screen sizes

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,6 +5,13 @@
 	background-color: rgb(181, 209, 217, 0.5);
 }
 
+@media (max-width: 1000px) {
+	.body {
+    height: 100%;
+    background-color: rgb(181, 209, 217, 0.5);
+	}
+}
+
 .container {
 	display: flex;
 	flex-direction: column;
