--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -15,5 +15,5 @@
 	padding-top: 0.8rem;
 	bottom: 0;
 	width: 100%;
-	background-color: rgba(81, 103, 109, .5);
+	background-color: rgba(181, 209, 217, 0.632);
 }
